# patent-agent-engine

./: .dockerignore  .gitignore  Makefile  README.ko.md  README.md  compose.yaml
100.Nexus/: Dockerfile  pyproject.toml
100.Nexus/src/: auth.py  cm_client.py  config.py  dro_client.py  errors.py  event_consumer.py  event_mapper.py  main.py  message_flow.py  router.py  routes.py  ws_inbound.py  ws_manager.py
200.DRO/mocks/: pyproject.toml
200.DRO/mocks/dro_app/: __init__.py  app.py  config.py  hub.py  sse.py  tape_player.py
300.Actor/: Dockerfile  pyproject.toml
300.Actor/mocks/: pyproject.toml
300.Actor/mocks/actor_app/: __init__.py  app.py  busy.py  canned.py  config.py  fixtures.py  rt_lookup.py
300.Actor/src/: actor_session.py  cm_client.py  composer.py  config.py  dispatcher.py  engine_config.py  errors.py  main.py  router.py  secrets.py  slots.py  sse.py
300.Actor/src/llm/: __init__.py  claude.py  client.py  fixture.py  gemini.py  knowledge.py  openai.py  retry.py  session.py  state.py
300.Actor/src/tools/: __init__.py
300.Actor/src/tools/cm/: __init__.py
300.Actor/src/tools/document/: __init__.py
300.Actor/src/tools/drawing/: __init__.py
300.Actor/src/tools/fetch/: __init__.py
300.Actor/src/tools/kipris/: __init__.py  cache.py  client.py  fake.py
300.Actor/src/tools/knowledge/: __init__.py
300.Actor/src/tools/maturity/: __init__.py
300.Actor/src/tools/media/: __init__.py  classifier.py  processor.py
300.Actor/src/tools/roadmap/: __init__.py
300.Actor/src/tools/staging/: __init__.py
300.Actor/src/tools/vision/: __init__.py
400.CM/: Dockerfile  pyproject.toml
400.CM/src/: chain_store.py  config.py  lock.py  main.py  queue_store.py  router.py  store.py
shared/: pyproject.toml
shared/venezia_cm_client/: __init__.py
shared/venezia_contracts/: __init__.py  loader.py
shared/venezia_contracts/models/dro_api/: __init__.py  account_api.py  channels.py  document.py  error.py  maturity.py  message.py  roadmap.py  upload.py  work_api.py
shared/venezia_deployment/: __init__.py  __main__.py  export.py  loader.py  model.py  runtime.py
shared/venezia_logging/: __init__.py
shared/venezia_media_config/: __init__.py
shared/venezia_memory/: __init__.py  scaffolding.yaml
shared/venezia_pipeline_runtime/: __init__.py  loader.py
shared/venezia_secrets/: __init__.py
shared/venezia_topology/: __init__.py  export_env.py
tests/enact/: README.md  pyproject.toml
tests/enact/enact/: __init__.py  __main__.py  _harness.py  _invariants.py  cli.py
tests/enact/enact/scenarios/: __init__.py  concurrency.py  context.py  dispatch.py  errors.py  tool.py
tests/endpoint/: README.md  pyproject.toml
tests/endpoint/endpoint/: __init__.py  __main__.py  call.py  cli.py  coverage.py
tests/endpoint/endpoint/phases/: __init__.py  _ws_schema.py  all_phases.py  ws_tape.py
tests/invoke/: README.md  coveragerc  pyproject.toml
tests/invoke/invoke/: __init__.py  __main__.py  cli.py
tests/invoke/invoke/suites/: __init__.py  conftest.py
tests/invoke/invoke/suites/account/: conftest.py  test_auth.py  test_cm_client.py  test_config.py  test_dro_client.py  test_errors.py  test_event_consumer.py  test_event_mapper.py  test_gateway_config_auth.py  test_message_flow.py  test_router.py  test_router_gateway.py  test_router_output.py  test_ws_inbound.py  test_ws_manager.py
tests/invoke/invoke/suites/actor/: test_actor_session.py  test_cm_client.py  test_composer.py  test_config.py  test_dispatcher.py  test_engine_config.py  test_errors.py  test_llm_client.py  test_llm_fixture.py  test_llm_init.py  test_llm_knowledge.py  test_llm_retry.py  test_llm_session.py  test_llm_state.py  test_registry.py  test_router.py  test_slots.py  test_sse.py  test_tools_cm.py  test_tools_document.py  test_tools_drawing.py  test_tools_fetch.py  test_tools_kipris.py  test_tools_kipris_cache.py  test_tools_kipris_client.py  test_tools_knowledge.py  test_tools_maturity.py  test_tools_media_classifier.py  test_tools_media_processor.py  test_tools_roadmap.py  test_tools_staging.py  test_tools_vision.py
tests/invoke/invoke/suites/cm/: conftest.py  (+7 more)
tests/lint/: README.md  pyproject.toml
tests/lint/lint/: __init__.py  __main__.py  _common.py  cli.py
tests/lint/lint/runners/: __init__.py  bandit.py  mypy.py  pip_audit.py  ruff.py
tests/play/: README.md  pyproject.toml
tests/play/play/: __init__.py  __main__.py  _run.py  _sse.py  cli.py
tests/probe/: README.md  pyproject.toml
tests/probe/probe/: __init__.py  __main__.py  _client.py  _common.py  _pipeline.py  _printer.py  _structure.py  cli.py
tests/probe/probe/commands/: __init__.py  check.py  clean.py  dialogs.py  dump_rt.py  exercise.py  list.py  list_chains.py  models.py  seed.py  structure.py  trail.py  verify.py  view.py
tests/validate/: README.md  pyproject.toml
tests/validate/validate/: __init__.py  __main__.py  _common.py  cli.py
tests/validate/validate/stages/: __init__.py  contracts.py  contracts_extended.py  external_api.py  stage_01_schema.py  stage_02_cascading.py  stage_03_cross_ref.py  stage_04_tool_registry.py  stage_05_inputs_placeholder.py  stage_06_cm_pointer.py  stage_10_ws_consistency.py  stage_11_dead_schema.py  stage_12_infra_config.py  stage_13_asyncapi.py  stage_14_census.py  stage_15_parallel_shape.py
tools/classification-indexer/: README.md  pyproject.toml
tools/classification-indexer/classification_indexer/: __init__.py  build.py  cli.py  merge.py  paths.py  verify.py
tools/classification-indexer/classification_indexer/sources/: __init__.py  _common.py  catchwords.py  concordance.py  data_go_kr.py  kipi_cpc.py  kipi_ipc.py  kipris_plus.py  wipo_cpc.py  wipo_ipc.py
tools/manual-indexer/: README.md  pyproject.toml
tools/manual-indexer/manual_indexer/: __init__.py  cli.py  extract.py  fetch.py  paths.py  summarize.py
tools/openapi-export/: pyproject.toml
tools/openapi-export/openapi_export/: cli.py
tools/rejections-indexer/: README.md  pyproject.toml
tools/rejections-indexer/rejections_indexer/: __init__.py  by_section.py  cases.py  cli.py  paths.py  summarize.py
(+1664 files in other folders)
