[project]
name = "account-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.0.0",
    "httpx>=0.28.0",
    "httpx-oauth>=0.15.0",
    "python-multipart>=0.0.9",
    "PyJWT>=2.13.0",
    "itsdangerous>=2.2.0",
    "boto3>=1.35.0",
    "venezia-shared",
]

[tool.uv.sources]
venezia-shared = { path = "../shared" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
