[project]
name = "drc-actor"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.9",
    "cachetools>=5.3.0",
    "pyyaml>=6.0",
    "schemdraw>=0.19",
    "defusedxml>=0.7.1",
    "claude-agent-sdk>=0.1.0",
    "openai-agents>=0.0.18",
    "google-adk>=1.12.0",
    "google-genai>=1.21.1,<2.0.0",
    "venezia-shared",
]

[project.optional-dependencies]
business = [
    "chromadb>=0.5.0",
]

[tool.uv]
# 보안 floor — pyjwt 는 transitive(claude-agent-sdk[crypto] 등). PYSEC-2026-175/177/178/179 차단.
constraint-dependencies = ["pyjwt>=2.13.0"]

[tool.uv.sources]
venezia-shared = { path = "../shared" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
