[project]
name = "cm-context-manager"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.0.0",
    "python-multipart>=0.0.9",
    "boto3>=1.35.0",
    "pyyaml>=6.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0",
    "venezia-shared",
]

[tool.uv.sources]
venezia-shared = { path = "../shared" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
