[project]
name = "dro-mock"
version = "0.1.0"
description = "dro:fake mock — tape player (spawn 수신 → 사전 정의 RAW event tape 를 /events SSE 로 재생)"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dro_app"]
