[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enact"
version = "0.1.0"
description = "검증 track 5 — Actor 단일 RT 수행(enact) 격리 검증 (harness = DRO 역할 대행)"
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.28.0",
  "jsonschema>=4.23.0",
  "pyyaml>=6.0",
  "probe",
  "venezia-shared",
]

[tool.uv.sources]
probe = { path = "../probe", editable = true }  # CM 하네스 — clean/_common 재사용 (play 선례)
# venezia_pipeline_runtime.load_pipeline_cascaded + venezia_contracts.ContractLoader
# + venezia_memory.persona_dir + venezia_topology.service_url
venezia-shared = { path = "../../shared", editable = true }

[project.scripts]
enact = "enact.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["enact"]

[tool.ruff]
target-version = "py313"
line-length = 100
