[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endpoint"
version = "0.1.0"
description = "검증 track 7 — 외부 API REST + WS contract e2e (외부 표면)"
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.28.0",
  "websockets>=13.0",
  "pyjwt>=2.13.0",         # SECURE phase: 공유 secret 으로 JWT mint (CI 자동화)
  "venezia-shared",
]

[tool.uv.sources]
venezia-shared = { path = "../../shared" }

[project.scripts]
endpoint = "endpoint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["endpoint"]

[tool.ruff]
target-version = "py313"
line-length = 100
