[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invoke"
version = "0.1.0"
description = "검증 track 3 — 모듈 단위 + integration pytest (no docker stack)"
requires-python = ">=3.14"
dependencies = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
invoke = "invoke.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["invoke"]

[tool.ruff]
target-version = "py313"
line-length = 100
