[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lint"
version = "0.1.0"
description = "검증 track 2 — 코드 정적 분석 (ruff + mypy + bandit + pip-audit) 일괄"
requires-python = ">=3.14"
dependencies = [
  "ruff>=0.8.0,<0.9.0",
  "mypy>=1.13.0,<2.0.0",
  "bandit>=1.7.0",
  "pip-audit>=2.7.0",
  "pip>=26.1.2",  # PYSEC-2026-196 (pip 26.1.1) — venv pip 명시 핀 (pip-audit self-clean)
]

[project.scripts]
lint = "lint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lint"]

[tool.ruff]
target-version = "py313"
line-length = 100
