[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "play"
version = "0.1.0"
description = "검증 track 6 — pipeline 실행 (無인자 = root 전수) + dispatch chain BFS follow"
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.28.0",
  "websockets>=13.0",
  "click>=8.0",
  "rich>=13.0.0",
  "jsonschema>=4.23.0",
  "probe",
  "venezia-shared",
]

[tool.uv.sources]
probe = { path = "../probe", editable = true }  # 라이브러리 — 소스 변경 즉시 반영(stale wheel 방지)
# venezia_deployment.runtime — detect_stack_mode 가 profile(@deployment/profile.stack.yaml) read.
venezia-shared = { path = "../../shared", editable = true }

[project.scripts]
play = "play.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["play"]

[tool.ruff]
target-version = "py313"
line-length = 100
