[project]
name = "classification-indexer"
version = "0.1.0"
description = "Build @knowledge/classification/ from multiple sources (WIPO IPC/CPC + KIPI + KIPRIS Plus + data.go.kr)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "lxml>=5.0",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["classification_indexer"]

[project.scripts]
build-classification = "classification_indexer.cli:main"
