[project]
name = "manual-indexer"
version = "0.1.0"
description = "Build @knowledge/drafting/ from KIPO 심사기준 PDFs (raw extract + 1-shot LLM summary)"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27.0",
    "pypdf>=5.1",
    "anthropic>=0.42",
    "structlog>=24.0",
    "venezia-shared",
]

[tool.uv.sources]
venezia-shared = { path = "../../shared" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manual_indexer"]

[project.scripts]
build-drafting = "manual_indexer.cli:main"
