[project]
name = "openapi-export"
version = "0.1.0"
description = "OpenAPI 정적 export — DRO + Nexus 가동 후 /api/v1/openapi.json fetch → .docs/Architectures/external_api/ 저장"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.0",
    "venezia-shared",
]

[tool.uv.sources]
venezia-shared = { path = "../../shared" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openapi_export"]

[project.scripts]
export-openapi = "openapi_export.cli:main"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
