[project]
name = "rejections-indexer"
version = "0.1.0"
description = "Build @knowledge/rejections/ — 거절사유 고정 summary (1-shot LLM, raw input from drafting/raw/)"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.42",
    "structlog>=24.0",
    "httpx>=0.27",
    "pypdf>=5.1",
    "chromadb>=0.5",
    "google-genai>=1.21.1,<2.0.0",
    "venezia-shared",
]

[tool.uv.sources]
venezia-shared = { path = "../../shared" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rejections_indexer"]

[project.scripts]
build-rejections = "rejections_indexer.cli:main"
